--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: exceed_resources_frontend
-description: Exceed Resources
+name: flutter boilerplate
+description:
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
@@ -20,6 +20,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   cached_network_image: ^3.2.1
+  lottie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -48,3 +49,4 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/animation/
